form inline label spacing fix

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -84,3 +84,6 @@ body ul.nav
   right: 0
   bottom: 0
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3)
+
+label
+  min-width: 80px
